# epitech-rtype

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  BackgroundSystem_8hpp_source.html  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ComponentManager_8hpp_source.html  Coordinator_8hpp_source.html  Doxyfile  Enemy_8hpp_source.html  EntityManager_8hpp_source.html  FreeImageConfig-dynamic_8h_source.html  FreeImageConfig-static_8h_source.html  INSTALL.md  INetworkHandler_8hpp_source.html  Level_8hpp_source.html  LevelsSystem_8hpp_source.html  MainMenuSystem_8hpp_source.html  MovementSystem_8hpp_source.html  NetworkClientManager_8hpp_source.html  NetworkEntity_8hpp_source.html  NetworkManager_8hpp_source.html  NetworkServerManager_8hpp_source.html  Network_8hpp_source.html  PhysicsSystem_8hpp_source.html  PlayerSystem_8hpp_source.html  Player_8hpp_source.html  ProjectileSystem_8hpp_source.html  Projectile_8hpp_source.html  README.md  ReliableUdpConnection_8hpp_source.html  RenderSystem_8hpp_source.html  SceneManager_8hpp_source.html  Sprite_8hpp_source.html  SystemManager_8hpp_source.html  System_8hpp_source.html  TextSystem_8hpp_source.html  Text_8hpp_source.html  (+810 more)
.github/workflows/: compile-and-lint-rtype.yml  compile-and-lint.yml  doxygen-gh-pages.yml  macos-compile.yml  ubuntu-compile-and-lint.yml  windows-compile.yml
assets/levels/: LevelEditing.md  level_1.level  level_2.level  level_3.level  level_4.level  level_5.level  level_6.level
docs/: CI.md  CODE-STRUCTURE.md  ECS.md  INTRO.md  INTRODUCTION.md  LEVEL-EDITING.md  R-TYPE-PROTOCOL-SPEC.md  RELEASE-WORKFLOW.md  RELIABLE-UDP-SPEC.md
docs/html/: BackgroundSystem_8hpp_source.html  ComponentManager_8hpp_source.html  Coordinator_8hpp_source.html  EntityManager_8hpp_source.html  MovementSystem_8hpp_source.html  Movement_8hpp_source.html  PhysicsSystem_8hpp_source.html  PlayerSystem_8hpp_source.html  Player_8hpp_source.html  RenderSystem_8hpp_source.html  RigidBody_8hpp_source.html  Sprite_8hpp_source.html  SystemManager_8hpp_source.html  System_8hpp_source.html  Transform_8hpp_source.html  Types_8hpp_source.html  Vec2_8hpp_source.html  WindowManager_8hpp_source.html  annotated.html  classBackgroundSystem-members.html  classBackgroundSystem.html  classBackgroundSystem__coll__graph.map  classBackgroundSystem__inherit__graph.md5  classComponent-members.html  classComponent.html  classComponentManager-members.html  classComponentManager.html  classComponent__coll__graph.map  classComponent__inherit__graph.md5  classCoordinator-members.html  classCoordinator.html  classEntityManager-members.html  classEntityManager.html  classIComponent-members.html  classIComponent.html  classIComponent__inherit__graph.map  classIComponent__inherit__graph.md5  classMovementSystem-members.html  classMovementSystem.html  classMovementSystem__coll__graph.md5  (+78 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  pages_1.js  searchdata.js
docs/latex/: annotated.tex  classBackgroundSystem.tex  classBackgroundSystem__coll__graph.md5  classComponent.tex  classComponentManager.tex  classComponent__inherit__graph.md5  classCoordinator.tex  classEntityManager.tex  classIComponent.tex  classIComponent__inherit__graph.md5  classMovementSystem.tex  classMovementSystem__coll__graph.md5  classPhysicsSystem.tex  classPhysicsSystem__inherit__graph.md5  classPlayerSystem.tex  classPlayerSystem__inherit__graph.md5  classRenderSystem.tex  classRenderSystem__inherit__graph.md5  classSystem.tex  classSystemManager.tex  classSystem__inherit__graph.md5  classVec2.tex  classWindowManager.tex  hierarchy.tex  md_CONTRIBUTING.tex  md_README.tex  refman.tex  structMovement.tex  structPlayer.tex  structRigidBody.tex  structRigidBody__coll__graph.md5  structSprite.tex  structTestComponent.tex  structTestSystem.tex  structTestSystem__coll__graph.md5  structTransform.tex  structTransform__coll__graph.md5  tabu_doxygen.sty
latex/: refman.tex
levels/: level_1.level  level_2.level  level_3.level  level_4.level  level_5.level  level_6.level
scripts/: setup_git_hooks.sh
scripts/script_data/: git-clang-format-pre-commit-hook
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  functions_0.js  (+28 more)
src/client/: main.cpp
src/client/components/: Enemy.hpp  Level.hpp  Movement.hpp  NetworkEntity.hpp  Player.hpp  RigidBody.hpp  Sprite.hpp  Text.hpp  Transform.hpp  Weapon.hpp  Window.hpp
src/client/core/: ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  NetworkManager.cpp  NetworkManager.hpp  SceneManager.cpp  SceneManager.hpp  System.hpp  SystemManager.hpp  Types.hpp  WindowManager.cpp  WindowManager.hpp
src/client/systems/: BackgroundSystem.cpp  BackgroundSystem.hpp  LevelsSystem.cpp  LevelsSystem.hpp  MainMenuSystem.cpp  MainMenuSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  ObjectsSystem.cpp  ObjectsSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  TextSystem.cpp  TextSystem.hpp  WaveSystem.cpp  WaveSystem.hpp  WeaponSystem.cpp  (+3 more)
src/reliable-udp/: ReliableUdpConnection.cpp  ReliableUdpConnection.hpp
src/server/: main.cpp  network_manager.hpp  sync_queue.hpp  utils.cpp  utils.hpp
src/tests/: basic-ecs.cpp  reliable-udp.cpp
(+53 files in other folders)
